--- a/package.json
+++ b/package.json
@@ -34,23 +34,25 @@
     "lerna": "^3.16.1"
   },
   "resolutions": {
+    "@wdio/appium-service": "5.12.1",
+    "@wdio/cli": "5.12.1",
+    "@wdio/config": "5.12.1",
+    "@wdio/dot-reporter": "5.12.1",
+    "@wdio/jasmine-framework": "5.12.1",
+    "@wdio/junit-reporter": "5.12.1",
+    "@wdio/local-runner": "5.12.1",
+    "@wdio/logger": "5.12.1",
+    "@wdio/repl": "5.12.1",
+    "@wdio/runner": "5.12.1",
+    "@wdio/sync": "5.12.1",
+    "@wdio/utils": "5.12.1",
     "acorn": "^7.1.1",
     "logkitty": "^0.7.1",
-    "**/eslint-plugin-react": "^7.14.1",
-    "**/@wdio/appium-service": "5.12.1",
-    "**/@wdio/cli": "5.12.1",
-    "**/@wdio/config": "5.12.1",
-    "**/@wdio/dot-reporter": "5.12.1",
-    "**/@wdio/jasmine-framework": "5.12.1",
-    "**/@wdio/junit-reporter": "5.12.1",
-    "**/@wdio/local-runner": "5.12.1",
-    "**/@wdio/logger": "5.12.1",
-    "**/@wdio/repl": "5.12.1",
-    "**/@wdio/runner": "5.12.1",
-    "**/@wdio/sync": "5.12.1",
-    "**/@wdio/utils": "5.12.1",
-    "**/webdriver": "git+https://github.com/react-native-windows/webdriver.git",
-    "**/webdriverio": "5.12.1"
+    "eslint-plugin-react": "^7.14.1",
+    "eslint-plugin-react-hooks": "3.0.0",
+    "eslint-plugin-react-hooks-comment": "eslint-plugin-react-hooks-resolution-can-be-removed-with-rn-after-july-10th-2020",
+    "webdriver": "git+https://github.com/react-native-windows/webdriver.git",
+    "webdriverio": "5.12.1"
   },
   "beachball": {
     "gitTags": false
