--- a/vnext/package.json
+++ b/vnext/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
-    "@react-native-community/cli": "^4.7.0",
-    "@react-native-community/cli-platform-android": "^4.7.0",
-    "@react-native-community/cli-platform-ios": "^4.7.0",
+    "@react-native-community/cli": "^4.10.0",
+    "@react-native-community/cli-platform-android": "^4.10.0",
+    "@react-native-community/cli-platform-ios": "^4.10.0",
     "@react-native-windows/cli": "0.0.0-canary.5",
     "abort-controller": "^3.0.0",
     "anser": "^1.4.9",
@@ -54,7 +54,7 @@
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.8",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@rnw-scripts/eslint-config": "0.0.2",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
     "eslint": "6.8.0",
@@ -64,7 +64,7 @@
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
     "react": "16.13.1",
-    "react-native": "0.0.0-851d01b0a",
+    "react-native": "0.0.0-3346ac7f9",
     "react-native-platform-override": "^0.2.1",
     "react-native-windows-codegen": "0.1.0",
     "react-refresh": "^0.4.0",
@@ -72,7 +72,7 @@
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-851d01b0a"
+    "react-native": "0.0.0-3346ac7f9"
   },
   "beachball": {
     "defaultNpmTag": "canary",
