Force hermes-engine 0.70
The version of Hermes used by RN 0.63 up to recent RN nightlies is vulerable to CVE-2020-1912, which shows up in component governance alerts. We don't actually use the npm package binary in any way, so this change pins a newer version of Hermes until we integrate the 9/17 Nightly RN build that will be part of RN 0.64.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@wdio/utils": "5.12.1",
     "acorn": "^7.1.1",
     "bl": "3.0.1",
+    "hermes-engine-comment": "The hermes-engine resolution can be removed when we integrate the 9/17 Nightly RN Build",
+    "hermes-engine": "0.7.0",
     "logkitty": "^0.7.1",
     "eslint-plugin-react": "^7.14.1",
     "eslint-plugin-react-hooks": "4.0.7",
