Add Component Governance Detection to ADO pipelines
Adding the CG checks so we can better stay on top of security issues

It won't fail the PR pipeline if issues are found, just give warnings.

Same with the publish pipline for now, though once we get codesigning
working we'll want to make sure to fail to publish binaires with known
security issues.

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -101,6 +101,15 @@ jobs:
           contents: |
             React.Windows.Desktop.DLL\**
             React.Windows.Desktop.Test.DLL\**
+      
+      - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+        displayName: 'Component Governance Detection'
+        inputs:
+          alertWarningLevel: Medium
+          scanType: 'Register'
+          # Uncomment this once we have codesigning working
+          # ${{ if endsWith(variables['Build.SourceBranchName'], '-stable') }}: # Fail on stable release builds
+          #   failOnAlert: true
 
   - job: RnwNativeBuildUniversal
     displayName: Build Universal
@@ -150,6 +159,15 @@ jobs:
             Microsoft.ReactNative\**
             Microsoft.ReactNative.Managed\**
             Microsoft.ReactNative.Managed.CodeGen\**
+      
+      - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+        displayName: 'Component Governance Detection'
+        inputs:
+          alertWarningLevel: Medium
+          scanType: 'Register'
+          # Uncomment this once we have codesigning working
+          # ${{ if endsWith(variables['Build.SourceBranchName'], '-stable') }}: # Fail on stable release builds
+          #   failOnAlert: true
 
     # Disable for now, not sure this works on github projects anyway.
     # - task: PublishSymbols@2
